@@ -4,6 +4,7 @@
 
 === 1.0.23 ===
 * Implemented IInSequence::sink() method for writing all content to another IOutSequence.
+* Fixed possible access to uninitialized memory when loading built-in resources.
 * Added Thread::yield() method.
 * Updated build scripts.
 
